2007-10-25  Junichi Uekawa  <dancer@debian.org>

	* parameter.c (parse_parameter): add --components option.

2007-10-15  Junichi Uekawa  <dancer@debian.org>

	* debian/qemubuilder.files: install bash-completion file to qemubuilder

	* Makefile: install bash_completion.

	* bash_completion.qemubuilder: create (a start of) qemubuilder bash completion script.

	* bash_completion.cowbuilder: add cowbuilder bash completion script.

2007-09-10  Junichi Uekawa  <dancer@debian.org>

	* cowbuilder.c (main): specify cowdancer-reuse
	(cpbuilder_internal_cowcopy): remove .ilist file here.
	(get_ilistfile_path, cpbuilder_internal_cowcopy)
	(cpbuilder_build): consolidate common code to get_ilistfile_path.

	* qemubuilder.c (run_second_stage_script): set date / time inside
	chroot with date command; it will be different by a few seconds.

2007-09-07  Junichi Uekawa  <dancer@debian.org>

	* cow-shell.c: fix case where .ilist didn't exist before.
	
	* qemubuilder.c: fix typo from "Jean-Baptiste Note"
	<jbnote@gmail.com>
	(run_second_stage_script): get network device name with ifconfig
	and grep. Can I assume 'ethX' here?

2007-09-06  Junichi Uekawa  <dancer@debian.org>

	* qemubuilder.c (fork_qemu): change 'termination signal' to
	'termination message' so that it's not confusing.

2007-09-04  Junichi Uekawa  <dancer@debian.org>

	* cow-shell.c: delete .ilist file if reuse flag is not set.

	* cowbuilder.c (cpbuilder_create): add cleanup code.

	* qemubuilder.c: cosmetic fixes.

2007-09-03  Junichi Uekawa  <dancer@debian.org>

	* qemubuilder.c (create_ext3_block_device): use mke2fs -F instead
	of yes|mke2fs
	(fork_qemu): do not handle fd '0', so that tty control can be
	done.  
	(fix_terminal): fix termios after exit from qemu, at least put
	echo on.
	(fork_qemu): Handle exit-codes.

2007-09-01  Junichi Uekawa  <dancer@debian.org>

	* Makefile (check-syntax): add check-syntax target for flymake mode.
	Remove redundant #include statements.
