@@ -23,7 +23,7 @@ Description: Copy-on-write directory tree utility.
 
 Package: qemubuilder
 Architecture: i386 amd64 powerpc
-Depends: ${shlibs:Depends}, qemu, pbuilder
+Depends: ${shlibs:Depends}, qemu, pbuilder (>= 0.174)
 Description: pbuilder using QEMU as backend
  pbuilder implementation for QEMU.
  .
